<resources>
    <string name="app_name">Exchange</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="byn">BYN</string>
    <string name="dynamic">Динамика</string>
    <string name="pick_the_date">Выберите дату</string>
    <string name="using_theme">Используемая тема</string>
    <string name="system">Системная</string>
    <string name="light">Светлая</string>
    <string name="dark">Темная</string>
    <string name="about_app">О приложении</string>
    <string name="currency_converter">Конвертер валют:</string>
    <string name="about_text">Данное приложение позволяет быстро конвертировать белорусские рубли в любую другую валюту, курс которой устанавливается Национальным Банком РБ. Также можно посмотреть курс рубля ко всем валютам на сегодня и то как он изменялся за период, не больше года</string>
    <string name="converter">Конвертер</string>
    <string name="all_currencies">Все валюты</string>
    <string name="info">Инфо</string>
    <string name="settings">Настройки</string>
    <string name="currencies_list">Список валют</string>
    <string name="rate_dynamic">Динамика курса</string>
    <string name="converter_currency">Конвертер валют</string>
    <string name="set_app_theme">Устанавливает тему приложения</string>
    <string name="choose_app_theme">Выберите тему приложения</string>
</resources>