<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.settings.SettingsFragment">


    <RadioGroup
        android:id="@+id/theme_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/using_theme"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/system_theme_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system" />

        <RadioButton
            android:id="@+id/light_theme_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/dark_theme_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>